crates/data-dict/tests/snapshots/validate_meta__extra_column_in_data_is_warning.snap
---
source: crates/data-dict/tests/validate_meta.rs
---
$version: "0.1.0"
$learn_more: http://data-dict.tidyverse.org/
tables:
  animals:
    source:
      parquet: data.parquet
    columns:
      - name: name
        type: string
        examples: [otter, seal]
────────────────────────────────────────
warning [M03]: Every column in the data should be described in the dictionary.
  `weight` is in the data (`number`) but not the dictionary
