crates/data-dict/tests/snapshots/validate_meta__unreadable_source_does_not_stop_other_tables.snap
---
source: crates/data-dict/tests/validate_meta.rs
---
$version: "0.1.0"
$learn_more: http://data-dict.tidyverse.org/
tables:
  - name: animals
    source:
      parquet: missing.parquet
    columns:
      - name: name
        type: string
        examples: [otter, seal]
  - name: plants
    source:
      parquet: plants.parquet
    columns:
      - name: name
        type: string
        examples: [moss, fern]
      - name: weight
        type: string
        examples: ['1', '2']
────────────────────────────────────────
Error: [M05] A table's `source` must point at a readable Parquet file.
   ╭─[ dict.yaml:6:16 ]
   │
 4 │   - name: animals
 5 │     source:
 6 │       parquet: missing.parquet
   │                ───────┬───────  
   │                       ╰───────── Parquet error: Cannot open file: No such file or directory (os error 2)
   ┆ 
───╯

Error: [M01] A column's data must match its declared type.
    ╭─[ dict.yaml:19:15 ]
    │
 11 │   - name: plants
    │ 
 18 │       - name: weight
 19 │         type: string
    │               ───┬──  
    │                  ╰──── the data is `number`
────╯
